--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ant-design/icons-vue": "^7.0.1",
     "@antv/data-set": "^0.11.8",
     "@antv/g2": "^5.1.15-beta.4",
+    "animate.css": "^4.1.1",
     "ant-design-vue": "^4.1.2",
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
