--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "echarts": "^5.5.0",
+    "lodash": "^4.17.21",
     "marked": "^12.0.0",
     "mockjs": "^1.1.0",
     "pinia": "^2.1.7",
