--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "@ant-design/icons-vue": "^7.0.1",
     "@antv/data-set": "^0.11.8",
     "@antv/g2": "^5.1.15-beta.4",
     "ant-design-vue": "^4.1.2",
-    "axios": "^1.6.7",
+    "axios": "^1.7.2",
     "echarts": "^5.5.0",
+    "faker": "^6.6.6",
+    "fs": "^0.0.1-security",
     "marked": "^12.0.0",
     "mockjs": "^1.1.0",
     "pinia": "^2.1.7",
@@ -27,7 +30,8 @@
     "uplot-vue": "^1.1.5",
     "vite-plugin-mock": "^3.0.1",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
